# intro-to-rag

./: .dockerignore  Dockerfile  README.md  langchain_multimodal.ipynb  pyproject.toml  test.py
app/: app.py
app-one-pdf/: app.py
app-rag-conversation/: .dockerignore  .env.sample  Dockerfile  Dockerfile-monostage  Makefile  README.md  app.py  pyproject.toml  utils.py
app-rag-conversation/src/app_rag_conversation/: app.py  app_gradio.py  htmlTemplates.py  utils.py
app-rag-conversation/src/app_rag_conversation/old/: app_taipy.py
app-rag-db/: .env.sample  Dockerfile-monostage  Makefile  README.md  config.yaml  pyproject.toml
app-rag-db/src/app_rag_db/: app.py  ingest_to_qdrant.py  ingest_to_qdrant_oai.py  utils.py
